Commit emulator version 0.04b with minor changes to synchronize old Google Code repo with new GitHub repo: 1. Reinstate browser application cache capability. 2. Cardatron printer is now Output Unit 3 (was 2). 3. Cardatron card reader will now initialize as not-ready by default. 4. Fix D205SetCallback minimum timeout threshold accidentally left at 2ms from testing. 5. Remove white gap between ElectroData logo and Supervisory Panel blue background.

--- a/webUI/D205SupervisoryPanel.css
+++ b/webUI/D205SupervisoryPanel.css
@@ -14,6 +14,10 @@
 DIV.panelRegCaption {           /* Overrides class in D205Common.css */
     border-top:         none}
     
+#LogoDiv {
+    font-size:          8px;
+    line-height:        1px}
+
 #ElectroDataLogo {
     width:              1180px}
     
